  * Allow to start Systray applet in the finish page of installer, as it is no more automatically lauched
  * Prompt user for TAG using OcsNotifyUser tool and optimze User notification code
  * Fix bug #104079: Try to check if part of memory is used by video, either less than 32 MB or less than 10%
  * Fix bug in ACER display's serial number retrieval
  * Do not launch OcsSystray at the end of setup, to avoid it running under system account when agent is upgraded using agent itself and package deployment
  * Display user notification tool version into Systray status window
  * Add NotifyUser debugging log support, and fix small typo generating error code 3 calling OcsNotifyUser tool
  * As proposed by Heiko Helmle, fix German typo and disable dialog system menu into user notification 
  * Bind to OcsNotifyUser tool to use the right VC libs 
  * Fix bug #809417: Delegate action to display message to user to a separate OcsNotifyUser.exe tool under Vista and +. This tool is launched under the session of the active user.
  * Fix bug described in blueprint "serialnumber": Wrong disk serial number is some case under Windows 7. if serial number length is greater than the max allowed size of 20, then assume serial is encoded in hexadecimal. So we have to decode string to store it.
  * Fix bug #1008562: New network parameters not sent to server. This bug is related to bug #1015434. 
  * Fix bug #820209: Add Windows firewall rules for OCS Inventory NG, only if firewall is enabled
  * Fix bug #1021367: Set Max Error allowed to 5 consecutive errors instead of 30, and also uses this parameter into package execution. Package will return ERR_EXECUTE_PACK if execution fails more then MAX_ERROR_COUNT set to 5. Also uses a timeout into command execution (default 120 minutes)
  * Fix big #1015434 : Try to also search for package ID file in installer parent directory