@@ -36,24 +36,23 @@
 extern "C" {
 #endif
 
-typedef int (*HOOK_START)(void);
-typedef int (*HOOK_END)(void);
-typedef int (*HOOK_CLEAN)(void);
-typedef int (*HOOK_PROLOG_WRITE)(CPrologRequest*);
-typedef int (*HOOK_PROLOG_RESP)(CPrologResponse*);
-typedef int (*HOOK_INVENTORY)(CInventoryRequest*);
-
 // Hook called when agent loads, typicaly used to initialize plugin
+typedef int (*HOOK_START)(void);
 OCSINVENTORY_API_EXPORTED int OCS_CALL_START_EXPORTED();
 // Hook called before sending prolog to server, typically used to add/modify information to prolog request
+typedef int (*HOOK_PROLOG_WRITE)(CPrologRequest*);
 OCSINVENTORY_API_EXPORTED int OCS_CALL_PROLOGWRITE_EXPORTED(CPrologRequest*);
 // Hook called after receiving prolog response from server, typically usd to parse additional data sent by server
+typedef int (*HOOK_PROLOG_RESP)(CPrologResponse*);
 OCSINVENTORY_API_EXPORTED int OCS_CALL_PROLOGRESP_EXPORTED(CPrologResponse*);
 // Hook called before sending inventory to server, typically used to add/modify inventory information sent to server
+typedef int (*HOOK_INVENTORY)(CInventoryRequest*);
 OCSINVENTORY_API_EXPORTED int OCS_CALL_INVENTORY_EXPORTED(CInventoryRequest*);
 // Hook called after receiving inventory response from server, typically usd to parse additional data sent by server
-OCSINVENTORY_API_EXPORTED int OCS_CALL_END_EXPORTED();
+typedef int (*HOOK_END)(CInventoryResponse*);
+OCSINVENTORY_API_EXPORTED int OCS_CALL_END_EXPORTED(CInventoryResponse*);
 // Hook called when agent exits, typically used to free plugin resources
+typedef int (*HOOK_CLEAN)(void);
 OCSINVENTORY_API_EXPORTED int OCS_CALL_CLEAN_EXPORTED();
 
 #ifdef __cplusplus
